tests/paczka1/fuzzy1/30414094.err
Error in line 1: VC0vPnh7 S786 22,5
Error in line 10: A62 S786 50,5
Error in line 14: GOR2DFat1zA A362 23,7
Error in line 13: pWIgsODs4A S786 77,4
Error in line 19: pWIgsODs4A A62 90,5
Error in line 23: FhfOmvAvCS A62 87,8
